[package]
name = "bc_constructor"
version = "0.1.0"
edition = "2024"

[dependencies]
rustc-hash = "1.1"
# bc_indicators = {git = "https://github.com/feUHMYHiEggtcIGA/bc_indicators.git", branch = "main"}
bc_utils_lg = {path = "../bc_utils_lg"}
# bc_utils_lg = {git = "https://github.com/feUHMYHiEggtcIGA/bc_utils_lg.git", branch = "main"}
bc_indicators = {path = "../bc_indicators"}
bc_exch_api_funcs = {path = "../bc_exch_api_funcs"}
bc_utils = {path = "../bc_utils"}